...
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
...
